hphp/hack/test/typecheck/attributes/memoize_abstract_method.php.legacy_decl.exp
File "memoize_abstract_method.php", line 5, characters 28-28:
Abstract methods cannot be memoized. (NastCheck[3087])
